--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,8 @@ log = "0.4"
 futures = "0.1"
 actix = "0.7"
 actix-web = { version = "0.7",  default-features = false }
+lazy_static = "1.3"
+reqwest = "0.9"
 serde = "1.0"
 serde_json = "1.0"
 serde_derive = "1.0"
